# youtube-connector-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  TECH_NOTES.md  pyproject.toml  requirements.txt  test_mcp.py
.claude/skills/browser-preview/: SKILL.md
.claude/skills/edm-add-email/: SKILL.md
.claude/skills/edm-plan/: SKILL.md
.claude/skills/edm-ui-check/: SKILL.md
.claude/skills/mckinsey-doc/: SKILL.md
.claude/skills/youtube-playlist/: SKILL.md
.claude/skills/youtube-search/: SKILL.md
.claude/skills/youtube-transcript/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: 00-README.md  01-skills.md  02-plugins.md  03-mcp.md  DEVELOPMENT.md  tech-sharing-skills-plugins-mcp.md
docs/plans/: 2026-01-27-youtube-mcp-design.md  2026-01-27-youtube-mcp.md  2026-01-28-testing-design.md
src/: config.py  main.py
src/tools/: analytics.py  search.py  transcript.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_imports.py  test_integration.py  test_mcp_protocol.py
tests/test_tools/: test_analytics.py  test_channel.py  test_comments.py  test_playlist.py  test_search.py  test_transcript.py  test_video.py
youtube_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
