[project]
name = "youtube-mcp-server"
version = "0.1.0"
description = "YouTube MCP Server for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "google-api-python-client>=2.140.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
