[tool.poetry]
name = "youtube-mcp-server"
version = "0.1.0"
description = "YouTube MCP Server for Claude Code"

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
google-api-python-client = "^2.140.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
responses = "^0.25.0"
